<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_add_admin_background">

    <ImageView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_add_admin_container"
        android:scaleType="fitXY"
        app:tint="?attr/admin_background_card"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/admin_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/username_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/add_admin_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_login_btn"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_container"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintWidth_percent=".50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_new_admin"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/add_admin_button"
        app:layout_constraintEnd_toEndOf="@id/add_admin_button"
        app:layout_constraintStart_toStartOf="@id/add_admin_button"
        app:layout_constraintTop_toTopOf="@id/add_admin_button" />
</androidx.constraintlayout.widget.ConstraintLayout>