<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_add_admin_background"
    tools:context=".ui.manager.add_category.AddCategoryFragment">

    <ImageView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_add_admin_container"
        android:elevation="8dp"
        app:tint="?attr/admin_background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cat_item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/category_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/category_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/company_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:hint="@string/company_name"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/price_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65">

        <AutoCompleteTextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/expire_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:padding="4dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:text="@string/choose_expiration_date"
        android:textColor="?attr/admin_text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/company_container"
        app:layout_constraintVertical_bias=".01"
        app:layout_constraintWidth_percent=".65" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:padding="4dp"
        android:textColor="?attr/admin_text_color"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/expire_date"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent=".25"
        tools:text="2-5-2021" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/second_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="end"
        android:padding="4dp"
        android:textColor="?attr/admin_text_color"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/expire_date"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent=".25"
        tools:text="2-5-2021" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/barcode_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/first_date"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".55">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/barcode_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/barcode"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/barcode_opener"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:elevation="18dp"
        app:layout_constraintBottom_toBottomOf="@id/barcode_container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@id/barcode_container"
        app:layout_constraintTop_toTopOf="@id/barcode_container"
        app:srcCompat="@drawable/ic_qr_code" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stock_count_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/barcode_container"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stock_count_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stock_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/add_category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_login_btn"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_count_container"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintWidth_percent=".50"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_category"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/add_category"
        app:layout_constraintEnd_toEndOf="@id/add_category"
        app:layout_constraintStart_toStartOf="@id/add_category"
        app:layout_constraintTop_toTopOf="@id/add_category" />
</androidx.constraintlayout.widget.ConstraintLayout>