<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_add_admin_background"
    tools:context=".ui.owner.add_shop_request.AddShopRequestFragment">

    <ImageView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_add_admin_container"
        android:scaleType="fitXY"
        app:tint="?attr/admin_background_card"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias="0.31"
        app:layout_constraintWidth_percent=".65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shop_name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/shop_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/username_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".65"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/location"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/add_shop_request"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_login_btn"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_container"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintWidth_percent=".50"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_shop_request"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/add_shop_request"
        app:layout_constraintEnd_toEndOf="@id/add_shop_request"
        app:layout_constraintStart_toStartOf="@id/add_shop_request"
        app:layout_constraintTop_toTopOf="@id/add_shop_request" />
</androidx.constraintlayout.widget.ConstraintLayout>